# pySigma-backend-chronicle

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
sigma/backends/chronicle/: __init__.py  chronicle.py
sigma/pipelines/chronicle/: __init__.py  chronicle.py
tests/: test_chronicle_backend.py  test_chronicle_pipelines.py
