[tool.poetry]
name = "pysigma-backend-chronicle"
version = "1.0.3"
description = "pySigma chronicle backend"
readme = "README.md"
authors = ["Pieter Van Goethem <vangoethempieter@gmail.com>"]
license = "LGPL-2.1-only"
repository = "https://github.com/ThisIsNotTheUserYouAreLookingFor/pySigma-backend-chronicle"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
